<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equal"
        android:id="@+id/equal" />
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/factor"
        android:id="@+id/factor" />
    
    <TextView
        android:paddingTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"/>
    
	<RadioGroup
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
 
        <RadioButton
            android:id="@+id/easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy" 
            android:checked="true" />
 
        <RadioButton
            android:id="@+id/average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/med" />
        
        <RadioButton
            android:id="@+id/difficult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diff" />
 
    </RadioGroup>
</LinearLayout>
